--- a/style.css
+++ b/style.css
@@ -90,6 +90,7 @@ body {
 
 .project {
   margin-bottom: 30px;
+  padding-left: 20px; /* Retaining some padding for alignment */
 }
 
 .project h4 {
@@ -143,6 +144,27 @@ body {
 
 .project-details li {
   margin-bottom: 8px;
+}
+
+.embed-container {
+  position: relative;
+  margin-top: 20px;
+  max-width: 504px;
+}
+
+.embed-container iframe {
+  width: 100%;
+  height: 542px;
+  border-radius: 8px;
+  border: 1px solid var(--border-color);
+  display: block;
+}
+
+.embed-container .read-more-btn {
+  position: absolute;
+  bottom: 15px;
+  left: 15px;
+  margin-top: 0;
 }
 
 .videos {
