--- a/style.css
+++ b/style.css
@@ -200,3 +200,17 @@ body {
     text-align: center;
   }
 }
+
+.portfolio-title {
+  width: 400px;
+  height: 50px;
+  display: block;
+}
+
+.portfolio-path {
+  stroke-width: 1;
+  stroke: var(--heading-color);
+  fill: none;
+  stroke-dasharray: 1;
+  stroke-dashoffset: 1;
+}
